16. Binding Attributes with the "v-bind" Directive

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <section id="user-goal">
     <h2>My Course Goal</h2>
     <p>{{ courseGoal }}</p>
+    <P>Learn more in <a v-bind:href="vueLink">Vue</a></P>
   </section>
 </body>
 
