17. Understanding "methods" in Vue Apps

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <section id="user-goal">
     <h2>My Course Goal</h2>
-    <p>{{ courseGoal }}</p>
+    <p>{{ outputGoal() }}</p>
     <P>Learn more in <a v-bind:href="vueLink">Vue</a></P>
   </section>
 </body>
