21. Understanding Event Binding

--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 
 <body>
   <header>
-    <h1>Vue Course Goals</h1>
+    <h1>Vue Events</h1>
   </header>
-  <section id="user-goal">
-    <p>{{ name }}</p>
-    <p>{{ age }}</p>
-    <p>{{ age + 5 }}</p>
-    <p>{{ outputGoal() }}</p>
-    <input type="text" id="lname" name="lname" v-model="name">
-    <div><img v-bind:src=img_url></div>
+  <section id="events">
+    <h2>Events in Action</h2>
+    <button v-on:click="counter++">Add</button>
+    <button v-on:click="counter--">Remove</button>
+    <p>Result: {{ counter }}</p>
   </section>
 </body>
 
