--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <button v-on:click="add(5)">Add</button>
     <button v-on:click="remove()">Remove</button>
     <p>Result: {{ counter }}</p>
+    <input type="text" v-on:input="setName($event, 'khanh')">
+    <p>Your name: {{ name }}</p>
   </section>
 </body>
 
