25. Exploring Event Modifiers

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <p>Result: {{ counter }}</p>
     <input type="text" v-on:input="setName($event, 'khanh')">
     <p>Your name: {{ name }}</p>
+    <form v-on:submit="submitForm">
+      <input type="text">
+      <button>Sign Up</button>
+    </form>
   </section>
 </body>
 
