--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>Result: {{ counter }}</p>
     <input type="text" v-on:input="setName($event, 'khanh')">
     <p>Your name: {{ name }}</p>
-    <form v-on:submit="submitForm">
+    <form v-on:submit.prevent="submitForm">
       <input type="text">
       <button>Sign Up</button>
     </form>
