--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </header>
   <section id="events">
     <h2>Events in Action</h2>
-    <button v-on:click="add(5)">Add</button>
+    <button v-on:click.left="add(5)">Add</button>
     <button v-on:click="remove()">Remove</button>
     <p>Result: {{ counter }}</p>
     <input type="text" v-on:input="setName($event, 'khanh')">
