--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
 <body>
   <header>
-    <h1>Vue Events</h1>
+    <h1>Events</h1>
   </header>
-  <section id="events">
-    <h2>Events in Action</h2>
-    <button v-on:click.left="add(5)">Add</button>
-    <button v-on:click="remove()">Remove</button>
-    <p v-once>init: {{ counter }}</p>
-    <p>Result: {{ counter }}</p>
-    <input type="text" v-on:input="setName($event, 'khanh')">
-    <p>Your name: {{ name }}</p>
-    <form v-on:submit.prevent="submitForm">
-      <input type="text">
-      <button>Sign Up</button>
-    </form>
+  <section id="assignment">
+    <h2>Event Practice</h2>
+    <!-- 1) Show an alert (any text of your choice) when the button is pressed -->
+    <button v-on:click="showAlert">Show Alert</button>
+    <hr />
+    <!-- 2) Register the user input on "keydown" and output it in the paragraph (hint: event.target.value helps) -->
+    <input type="text" v-on:input.keydown="getInput" />
+    <p>OUTPUT: {{ output1 }}</p>
+    <hr />
+    <!-- 3) Repeat 2) but only output the entered value if the ENTER key was pressed -->
+    <input type="text" v-on:input="getInput2" v-on:keyup.enter="getEnter" />
+    <p>OUTPUT: {{ confirm }}</p>
   </section>
 </body>
 
