--- a/index_old.html
+++ b/index_old.html
@@ -13,16 +13,21 @@
 
 <body>
   <header>
-    <h1>Reactivity in Action</h1>
+    <h1>Events</h1>
   </header>
-  <section id="assignment">
-    <button @click="add5">Add 5</button>
-    <button @click="add1">Add 1</button>
-    <!-- 1) Connect the buttons and calculate a value (a number) -->
-    <!-- Show "Not there yet" until you reach a result of exactly 37 -->
-    <!-- Show "Too much!" if the result is greater than 37 -->
-    <p>Result: {{ getResult }}</p>
-    <!-- 2) Watch for changes in "result" and reset the value to 0 after 5 seconds -->
+  <section id="events">
+    <h2>Events in Action</h2>
+    <button @:click="add(5)">Add</button>
+    <button @:click="remove()">Remove</button>
+    <p v-once>init: {{ counter }}</p>
+    <p>Result: {{ counter }}</p>
+    <input type="text" v-model="name">
+    <button @:click="reset">Reset input</button>
+    <p>Your name: {{ fullname }}</p>
+    <!-- <form v-on:submit.prevent="submitForm">
+      <input type="text">
+      <button>Sign Up</button>
+    </form> -->
   </section>
 </body>
 
