--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h1>Vue Dynamic Styling</h1>
   </header>
   <section id="styling">
-    <div class="demo" :class="boxAClassed" @click="boxSelected('A')"></div>
-    <div class="demo" :class="boxBClassed" @click="boxSelected('B')"></div>
+    <div :class="['demo', boxAClassed]" @click="boxSelected('A')"></div>
+    <div :class="['demo', {active: boxBSelected}]" @click="boxSelected('B')"></div>
     <div class="demo" :class="boxCClassed" @click="boxSelected('C')"></div>
   </section>
 </body>
